<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.loanbook.AddRecord">


    <TextView
        android:id="@+id/tv_DateShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spr_people_name"
        android:layout_marginStart="57dp"
        android:layout_marginTop="139dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/record_date" />

    <Spinner
        android:id="@+id/spr_people_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_add_payment"
        android:layout_below="@+id/tv_DateShow"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="47dp" />

    <Spinner
        android:id="@+id/spr_payment_type"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spr_people_name"
        android:layout_below="@+id/spr_people_name"
        android:entries="@array/payment"
        android:layout_marginTop="39dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spr_payment_type"
        android:layout_marginTop="83dp">

        <EditText
            android:id="@+id/et_paymentOf_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_add_payment"
            android:layout_alignStart="@+id/spr_payment_type"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_add_payment"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/send_payment"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#00B0FF"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/add_record"
            android:textColor="#1B5E20"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/start_adding_record"
            android:textColor="#43A047"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>
