<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.user.loanbook.AddPeopleActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >

        <EditText
            android:id="@+id/et_new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="normal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
       >

        <EditText
            android:id="@+id/et_new_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/spr_man_type"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:entries="@array/type"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tv_show_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:text="@string/select_date"
        android:textColor="#424242"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_add_people"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_this_people_to_your_list" />




</LinearLayout>
